test/JDBC/sql_expected/BABEL_2858-vu-verify.out
SELECT set_config('babelfishpg_tsql.enable_sll_parse_mode', 'true', false)
GO
~~START~~
text
on
~~END~~

-- valid sll parsing and ll parsing
SELECT * FROM babel_2858_t1
GO
~~START~~
int#!#varchar
~~END~~


-- fails both sll parsing and ll parsing
SELECT FROM WHERE GROUP BY
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near 'FROM' at line 2 and character position 7)~~


-- fails sll parsing passes ll parsing passes, valid query
delete babel_2858_t1
output babel_2858_t1.word
from babel_2858_t1
inner join babel_2858_t1_deleted
 on babel_2858_t1.num=babel_2858_t1_deleted.num
where babel_2858_t1.num=14;
go
~~START~~
varchar
~~END~~


-- fails sll parsing ll parsing passes, invalid query
DECLARE @x xml (dbo.f);
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: type modifier is not allowed for type "xml")~~


SELECT set_config('babelfishpg_tsql.enable_sll_parse_mode', 'false', false)
GO
~~START~~
text
off
~~END~~

